--- a/static/src/css/login.css
+++ b/static/src/css/login.css
@@ -6,42 +6,73 @@ html {
 }
 
 .openerp .oe_login p {
-	text-align: -webkit-right;
+text-align: -webkit-right;
+margin-left: 16px;
+margin-right: 16px;
+}
+
+.openerp .oe_login input {
+padding: 5px 6px;
+margin-bottom: 0px;
+}
+
+.openerp .oe_login .oe_login_head {
+	background-image: linear-gradient(0deg, rgb(210, 20, 30), rgb(250, 20, 20));
+	text-align: center;
+	color: white;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	margin-bottom: 16px;
+}
+
+.openerp .oe_login .oe_login_head h1{
+	margin-top: 0px;
+	margin-bottom: 0px;
+	font-size: 20px;
 }
 
 .openerp .oe_login .oe_login_pane {
 	color: #545454;
-	border-radius: 5px;
+	padding-top: 0px;
+	padding-left: 0px;
+	padding-right: 0px;
+	padding-bottom: 0px;
 	-webkit-box-shadow: 0px 3px 7px rgba(50, 50, 50, 0.45);
-	border: solid 1px #E0E0E0;
+	border: solid 0px #E0E0E0;
 	box-shadow: 0px 3px 7px rgba(50, 50, 50, 0.45);
 	background-image: linear-gradient(0deg, rgb(209, 209, 209), rgb(233, 233, 233));
 }
 
 .openerp .oe_login button {
-	margin-right: 154px;
+	margin-right: 142px;
 	border-radius: 3px;
-	border: 1px solid #FF0000;
+	border: none;
 	background-image: linear-gradient(0deg, rgb(210, 20, 30), rgb(250, 20, 20));
+	font-size: 15px;
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4), 0 1px 1px rgba(50, 50, 50, 0.4) inset;
 }
 
 .openerp .oe_login {
 	background-image: none !important;
 	background-color: #e9e9e9;
 	text-align: center;
-	font-size: 16px;
+	font-size: 15px;
 	height: 100%;
 }
 
 .openerp .oe_login .oe_login_pane {
 	position: absolute;
+	-webkit-border-radius: 5px;
 	top: 60%;
 	left: 50%;
+	border: none;
 }
 
 .openerp .oe_login .oe_login_logo {
 	position: absolute;
-	top: -150px;
+	top: -130px;
 	left: 0;
 	width: 100%;
 	margin: 0 auto;
@@ -50,7 +81,8 @@ html {
 
 .openerp .oe_login .oe_login_footer span {
 	font-weight: bold;
-	font-size: 18px;
+	font-size: 15px;
+	bottom: -60px;
 }
 
 .openerp .oe_login .oe_login_footer a {
